add storehouses api
