# controllers/api/__init__.py
@@ -1,2 +1,3 @@
 from .registration import registration_handler
 from .login import login_handler
+from .storehouse import get_store_houses_handler, create_store_house_handler, delete_store_house_handler
